<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txt" />

    <RadioGroup
        android:id="@+id/ac_main_rdGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/ac_main_rdBtn_sampleNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_rdBtn_sample" />

        <RadioButton
            android:id="@+id/ac_main_rdBtn_largeIconNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_rdBtn_largeIcon" />

        <RadioButton
            android:id="@+id/ac_main_rdBtn_priorityNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_rdBtn_priority" />

        <RadioButton
            android:id="@+id/ac_main_rdBtn_bigTextStyleNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_rdBtn_bigTextStyle" />

        <RadioButton
            android:id="@+id/ac_main_rdBtn_bigPictureStyleNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_rdBtn_bigPictureStyle" />
    </RadioGroup>

    <Button
        android:id="@+id/main_btn_showNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/main_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</LinearLayout>